# DominiGames-TestAssignment

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/dominigames_testassignment/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/mesh/: cube.ini
app/src/main/assets/scene/: cube_scene.ini
app/src/main/assets/shaders/: basic.frag  basic.vert
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/src/: native-lib.cpp
app/src/main/cpp/src/Content/: Loader.cpp  Loader.h
app/src/main/cpp/src/Input/: Input.cpp  Input.h
app/src/main/cpp/src/Renderer/: Context.h  Mesh.h  MeshData.h  MeshRenderer.cpp  MeshRenderer.h  Renderer.cpp  Renderer.h  Resource.h  Shader.h
app/src/main/cpp/src/Renderer/GLES/: ContextGLES.cpp  ContextGLES.h  Mesh.cpp  MeshGLES.cpp  MeshGLES.h  Shader.cpp  ShaderGLES.cpp  ShaderGLES.h
app/src/main/cpp/src/Renderer/MeshData/: BasicMesh.h  MeshBase.h
app/src/main/cpp/src/Scene/: Entity.cpp  Entity.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
app/src/main/cpp/src/Util/: IniUtils.cpp  IniUtils.h  Singleton.h
app/src/main/java/com/example/dominigames_testassignment/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/dominigames_testassignment/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
